<resources>
    <string name="app_name">GPA_Calc</string>
    <string name="enter_your_grade">Enter your grade</string>
    <string name="title">GPA R02062232 Calculator</string>
    <string name="compute_gpa">Compute GPA</string>
    <string name="class_one">Class 1</string>
    <string name="class_two">Class 2</string>
    <string name="class_three">Class 3</string>
    <string name="class_four">Class 4</string>
    <string name="class_five">Class 5</string>
    <string name="displayGPA">Current GPA: %.2f</string>
    <string name="displayGPA_default">Current GPA: 0.00</string>
    <string name="clear_form">Clear Form</string>
</resources>
